<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <RadioGroup 
        android:id="@+id/radiogroup_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RadioButton 
            android:id="@+id/radio_currentpath"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_currentpath"/>
        <RadioButton 
            android:id="@+id/radio_wholepath"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_wholepath"/>
    </RadioGroup>
	<!-- 输入文件或者文件夹名字 -->
	<EditText 
	    android:id="@+id/edit_search"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/edit_search_hint"
	    android:singleLine="true"/>
</LinearLayout>
